--- a/src/Views/ChangeCollectionView.axaml
+++ b/src/Views/ChangeCollectionView.axaml
@@ -9,10 +9,10 @@
              x:Class="SourceGit.Views.ChangeCollectionView"
              x:Name="ThisControl">
   <UserControl.Resources>
-    <DataTemplate x:Key="TreeModeTemplate" DataType="m:FileTreeNode">
+    <DataTemplate x:Key="TreeModeTemplate" DataType="v:ChangeTreeNode">
       <Grid HorizontalAlignment="Stretch" Height="24" ColumnDefinitions="Auto,*">
         <Path Grid.Column="0" Classes="folder_icon" Width="14" Height="14" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" Fill="Goldenrod" VerticalAlignment="Center"/>
-        <v:ChangeStatusIcon Grid.Column="0" Width="14" Height="14" IsWorkingCopyChange="{Binding #ThisControl.IsWorkingCopyChange}" Change="{Binding Backend}" IsVisible="{Binding !IsFolder}"/>
+        <v:ChangeStatusIcon Grid.Column="0" Width="14" Height="14" IsWorkingCopyChange="{Binding #ThisControl.IsWorkingCopyChange}" Change="{Binding Change}" IsVisible="{Binding !IsFolder}"/>
         <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}" Margin="6,0,0,0"/>
       </Grid>
     </DataTemplate>
