enhance: only store subject in commits.
It has several advantages:

* reduce the memory costed by histories
* higher performance while parsing commits
* no need to calculate subject every time, which is invoked most frequently to render histories

--- a/src/Views/CommitDetail.axaml
+++ b/src/Views/CommitDetail.axaml
@@ -19,7 +19,7 @@
 
       <Grid RowDefinitions="Auto,1,*">
         <!-- Base Information -->
-        <v:CommitBaseInfo Grid.Row="0" Content="{Binding Commit}"/>
+        <v:CommitBaseInfo Grid.Row="0" Content="{Binding Commit}" Message="{Binding FullMessage}"/>
 
         <!-- Line -->
         <Rectangle Grid.Row="1" Height=".65" Margin="8" Fill="{DynamicResource Brush.Border2}" VerticalAlignment="Center"/>
