--- a/src/Views/Launcher.axaml
+++ b/src/Views/Launcher.axaml
@@ -15,6 +15,8 @@
         Title="SourceGit"
         Background="Transparent"
         MinWidth="1280" MinHeight="720"
+        Width="{Binding Source={x:Static vm:Preference.Instance}, Path=Layout.LauncherWidth, Mode=TwoWay}"
+        Height="{Binding Source={x:Static vm:Preference.Instance}, Path=Layout.LauncherHeight, Mode=TwoWay}"
         WindowStartupLocation="CenterScreen"
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
