--- a/src/Views/CheckoutCommit.axaml
+++ b/src/Views/CheckoutCommit.axaml
@@ -11,14 +11,16 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Checkout.Commit}" />
-    
-    <TextBlock Margin="0,8,0,16"
-               Text="{DynamicResource Text.Checkout.Commit.Warning}"
-               TextWrapping="Wrap"
-               Foreground="{DynamicResource Brush.FG2}"
-               FontStyle="Italic"/>
 
-    <Grid RowDefinitions="32,Auto" ColumnDefinitions="Auto,*" ClipToBounds="True">
+    <StackPanel Orientation="Horizontal" Margin="0,12,0,16">
+      <Path Width="14" Height="14" Data="{StaticResource Icons.Error}" Fill="DarkOrange"/>
+      <TextBlock Margin="4,0,0,0" 
+                 Text="{DynamicResource Text.Checkout.Commit.Warning}"
+                 TextWrapping="Wrap"
+                 FontStyle="Italic"/>
+    </StackPanel>
+    
+    <Grid RowDefinitions="32,Auto" ColumnDefinitions="Auto,*" ClipToBounds="True" HorizontalAlignment="Center">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
