--- a/src/Views/Archive.axaml
+++ b/src/Views/Archive.axaml
@@ -28,11 +28,11 @@
           </DataTemplate>
 
           <DataTemplate DataType="m:Commit">
-            <StackPanel Orientation="Horizontal">
-              <Path Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}"/>
-              <TextBlock Classes="monospace" VerticalAlignment="Center" Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="8,0,0,0"/>
-              <TextBlock VerticalAlignment="Center" Text="{Binding Subject}" Margin="4,0,0,0"/>
-            </StackPanel>
+            <Grid ColumnDefinitions="Auto,Auto,*">
+              <Path Grid.Column="0" Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}"/>
+              <TextBlock Grid.Column="1" Classes="monospace" VerticalAlignment="Center" Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="8,0,0,0"/>
+              <TextBlock Grid.Column="2" VerticalAlignment="Center" Text="{Binding Subject}" Margin="4,0,0,0" TextTrimming="CharacterEllipsis"/>
+            </Grid>
           </DataTemplate>
 
           <DataTemplate DataType="m:Tag">
