--- a/src/Views/Revert.axaml
+++ b/src/Views/Revert.axaml
@@ -12,17 +12,17 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Revert}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32" ColumnDefinitions="150,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="32,32" ColumnDefinitions="130,*">
       <TextBlock Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Revert.Commit}"/>
 
-      <StackPanel Grid.Column="1" Orientation="Horizontal">
-        <Path Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}"/>
-        <TextBlock Classes="monospace" VerticalAlignment="Center" Text="{Binding Target.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="8,0,0,0"/>
-        <TextBlock VerticalAlignment="Center" Text="{Binding Target.Subject}" Margin="4,0,0,0"/>
-      </StackPanel>
+      <Grid Grid.Column="1" ColumnDefinitions="Auto,Auto,*">
+        <Path Grid.Column="0" Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}"/>
+        <TextBlock Grid.Column="1" Classes="monospace" VerticalAlignment="Center" Text="{Binding Target.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="8,0,0,0"/>
+        <TextBlock Grid.Column="2" VerticalAlignment="Center" Text="{Binding Target.Subject}" Margin="4,0,0,0" TextTrimming="CharacterEllipsis"/>
+      </Grid>
 
       <CheckBox Grid.Row="1" Grid.Column="1"
                 Content="{DynamicResource Text.Revert.CommitChanges}"
