--- a/src/Views/DiffView.axaml
+++ b/src/Views/DiffView.axaml
@@ -234,9 +234,7 @@
 
           <!-- Text Diff -->
           <DataTemplate DataType="m:TextDiff">
-            <v:TextDiffView TextDiff="{Binding}"
-                            SyncScrollOffset="{Binding SyncScrollOffset, Mode=TwoWay}"
-                            UseSideBySideDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=OneWay}"/>
+            <v:TextDiffView UseSideBySideDiff="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=OneWay}"/>
           </DataTemplate>
 
           <!-- Empty or only EOL changes -->
